Fix more layout problems on Chrome

--- a/assets/index.css
+++ b/assets/index.css
@@ -243,7 +243,6 @@ a {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    height: 100%;
     margin-left: 1rem;
     margin-right: 1rem;
 }
@@ -393,7 +392,6 @@ a {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    flex: 1 0 100%;
 }
 
 .index-banner-header > h2,
@@ -409,10 +407,6 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .index-banner-header {
-        flex: 0 1 auto;
-    }
-
     .index-banner-header > h2 {
         font-size: 3.25rem;
         line-height: 1.5;
@@ -542,11 +536,9 @@ a {
 .auth-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     flex-grow: 1;
     padding-top: 4rem;
-    padding-bottom: 4rem;
     gap: 1rem;
 }
 
